<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/rootLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_gradient"
        android:focusableInTouchMode="true"
        tools:context=".ui.auth.login.LoginFragment">


        <!-- Title Group -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/titleGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_form_horizontal"
            android:layout_marginTop="@dimen/margin_title_top"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/tvLoginTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/login"
                android:textColor="@android:color/white"
                android:textSize="32sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvSubtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_subtitle_top"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/welcome_back_nplease_enter_your_details"
                android:textColor="#C6CAD1"
                android:textSize="17sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvLoginTitle" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/inputContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_input_container_top"
            app:layout_constraintTop_toBottomOf="@id/titleGroup"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/emailGroup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_form_horizontal"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <TextView
                    android:id="@+id/tvEmailLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_semibold"
                    android:paddingBottom="5dp"
                    android:text="@string/enter_email"
                    android:textColor="#FFFFFF"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/emailLayout" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emailLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:maxWidth="400dp"
                    app:boxBackgroundMode="outline"
                    app:boxCollapsedPaddingTop="0dp"
                    app:boxCornerRadiusBottomEnd="24dp"
                    app:boxCornerRadiusBottomStart="24dp"
                    app:boxCornerRadiusTopEnd="24dp"
                    app:boxCornerRadiusTopStart="24dp"
                    app:boxStrokeColor="@color/outlined_box_stroke_color"
                    app:boxStrokeWidth="1dp"
                    app:boxStrokeWidthFocused="1dp"
                    app:endIconTint="#ADADAD"
                    app:errorEnabled="false"
                    app:helperTextEnabled="false"
                    app:hintEnabled="false"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvEmailLabel"
                    app:startIconDrawable="@drawable/email"
                    app:startIconTint="#ADADAD">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etEmail"
                        style="@style/AppInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/enter_your_email"
                        android:inputType="textEmailAddress"
                        android:paddingEnd="10dp"
                        tools:ignore="RtlSymmetry" />

                </com.google.android.material.textfield.TextInputLayout>

                <ImageView
                    android:id="@+id/ivEmailError"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/error_in_email"
                    android:visibility="invisible"
                    app:layout_constraintBottom_toBottomOf="@+id/emailLayout"
                    app:layout_constraintEnd_toEndOf="@+id/emailLayout"
                    app:layout_constraintTop_toTopOf="@+id/emailLayout"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/tvEmailError"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:fontFamily="@font/roboto_regular"
                    android:textColor="#F44336"
                    android:textSize="12sp"
                    android:visibility="invisible"
                    app:layout_constraintStart_toStartOf="@+id/emailLayout"
                    app:layout_constraintTop_toBottomOf="@+id/emailLayout"
                    tools:text="Invalid email format" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/passwordGroup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_form_horizontal"
                android:layout_marginTop="@dimen/spacing_form_group"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/emailGroup">

                <TextView
                    android:id="@+id/passwordLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_semibold"
                    android:paddingBottom="5dp"
                    android:text="@string/enter_password"
                    android:textColor="#FFFFFF"
                    app:layout_constraintStart_toStartOf="@+id/passwordLayout"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/passwordLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:maxWidth="400dp"
                    app:boxBackgroundMode="outline"
                    app:boxCollapsedPaddingTop="0dp"
                    app:boxCornerRadiusBottomEnd="24dp"
                    app:boxCornerRadiusBottomStart="24dp"
                    app:boxCornerRadiusTopEnd="24dp"
                    app:boxCornerRadiusTopStart="24dp"
                    app:boxStrokeColor="@color/outlined_box_stroke_color"
                    app:boxStrokeWidth="1dp"
                    app:boxStrokeWidthFocused="1dp"
                    app:endIconTint="#C6CAD1"
                    app:errorEnabled="false"
                    app:helperTextEnabled="false"
                    app:hintEnabled="false"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/passwordLabel"
                    app:startIconDrawable="@drawable/lock"
                    app:startIconTint="#C6CAD1">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etPassword"
                        style="@style/AppInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/enter_your_password"
                        android:inputType="textPassword" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/tvPasswordError"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:fontFamily="@font/roboto_regular"
                    android:textColor="#F44336"
                    android:textSize="12sp"
                    android:visibility="invisible"
                    app:layout_constraintStart_toStartOf="@+id/passwordLayout"
                    app:layout_constraintTop_toBottomOf="@+id/passwordLayout"
                    tools:text="Password is required" />

                <TextView
                    android:id="@+id/tvForgotPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:fontFamily="@font/roboto_regular"
                    android:paddingVertical="12dp"
                    android:text="@string/forgot_password"
                    android:layout_marginTop="15dp"
                    android:textColor="#FFFFFF"
                    android:textSize="13sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/passwordLayout" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/actionsGroup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_form_horizontal"
                android:layout_marginTop="@dimen/spacing_form_group"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passwordGroup">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnLogin"
                    android:layout_width="0dp"
                    android:layout_height="38dp"
                    android:maxWidth="400dp"
                    android:background="@drawable/rounded_button_bg"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/log_in"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/btnLogin">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_regular"
                        android:text="@string/not_have_any_account"
                        android:textColor="#FFFFFF"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/tvSignupLink"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:fontFamily="@font/roboto_regular"
                        android:paddingVertical="15dp"
                        android:text="@string/sign_up"
                        android:textColor="#2563EB"
                        android:textSize="13sp" />
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- Decorative Ellipses -->
        <ImageView
            android:id="@+id/ellipse1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@drawable/ellipse_1"
            android:layout_marginBottom="@dimen/ellipse1_margin_bottom"
            app:layout_constraintBottom_toBottomOf="@id/ellipse2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="ContentDescription"/>

        <ImageView
            android:id="@+id/ellipse2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@drawable/ellipse_1"
            android:layout_marginBottom="@dimen/ellipse2_margin_bottom"
            app:layout_constraintBottom_toBottomOf="@+id/ellipse3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="ContentDescription"/>

        <ImageView
            android:id="@+id/ellipse3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@drawable/ellipse_1"
            android:paddingBottom="@dimen/ellipse3_padding_bottom"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="ContentDescription"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
